# formula-evaluator

./: CMakeLists.txt  LICENSE  README.md  README.txt  main.cpp
include/: formula_eval.hpp  formula_eval.ipp
